--- a/spring_notes/src/main/resources/application.yml
+++ b/spring_notes/src/main/resources/application.yml
@@ -2,10 +2,13 @@ spring:
   profiles:
     active: dev
   datasource:
-    url: jdbc:h2:mem:testdb
+    url: jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1
     driver-class-name: org.h2.Driver
     username: sa
     password: sa
+  sql:
+    init:
+      schema-locations: classpath:schema.sql
   h2:
     console:
       enabled: true
@@ -16,24 +19,3 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
-
----
-spring:
-  profiles:
-    active: prod
-  datasource:
-    url: jdbc:postgresql://localhost:5432/notes?createDatabaseIfNotExist=true
-    driver-class-name: org.postgresql.Driver
-    username: postgres
-    password: postgres
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
-            database-platform: org.hibernate.dialect.PostgreSQL9Dialect
-        format_sql: true
