--- a/spring_notes/src/main/resources/application.yml
+++ b/spring_notes/src/main/resources/application.yml
@@ -1,15 +1,19 @@
 spring:
-  config:
-    activate:
-      on-profile: prod
+#  config:
+#    activate:
+#      on-profile: prod
   datasource:
     url: jdbc:postgresql://localhost:5432/notes
     driver-class-name: org.postgresql.Driver
     username: postgres
     password: postgres
+  sql:
+    init:
+      schema-locations: classpath:schema.sql
+      data-locations: classpath:init.sql
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     show-sql: true
     properties:
       hibernate:
@@ -19,26 +23,28 @@ spring:
             database-platform: org.hibernate.dialect.PostgreSQL9Dialect
         format_sql: true
 
----
-spring:
-  config:
-    activate:
-      on-profile: dev
-  datasource:
-    url: jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1
-    driver-class-name: org.h2.Driver
-    username: sa
-    password: sa
-  sql:
-    init:
-      schema-locations: classpath:schema.sql
-  h2:
-    console:
-      enabled: true
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+#---
+#spring:
+#  config:
+#    activate:
+#      on-profile: dev
+#  datasource:
+#    url: jdbc:h2:mem:memDb;DB_CLOSE_DELAY=-1
+#    driver-class-name: org.h2.Driver
+#    username: sa
+#    password: sa
+#  sql:
+#    init:
+#      schema-locations: classpath:schema.sql
+#      data-locations: classpath:init.sql
+#      mode: always
+#  h2:
+#    console:
+#      enabled: true
+#  jpa:
+#    hibernate:
+#      ddl-auto: validate
+#    show-sql: true
+#    properties:
+#      hibernate:
+#        dialect: org.hibernate.dialect.H2Dialect
